--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @cocktail.name %></h1>
+<%= cl_image_tag @cocktail.photo.key, height: 300, width: 200, crop: :fill %>
 <ul>
   <% @cocktail.doses.each do |dose|  %>
     <li>
@@ -7,4 +8,5 @@
   <% end %>
 </ul>
 <%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary mb-3" %> </br>
-<%= link_to 'Back to all cocktails', cocktails_path %>
+
+
