--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,25 @@
   </head>
 
   <body>
-    <div class="container mt-3">
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "https://i.pinimg.com/originals/3a/e8/55/3ae8553569847261a36345b003dae98f.jpg" %>
+  <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <%= link_to 'Cocktails', cocktails_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Create a Cocktail', new_cocktail_path, class: 'btn btn-primary' %>
+      </li>
+    </ul>
+  </div>
+</div>
     <%= yield %>
-    </div>
   </body>
 </html>
