--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,15 @@
-<h1>Create a new Cocktail</h1>
-<%= simple_form_for(@cocktail) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 offset-sm-2 col-xl-10 offset-xl-1 ">
+      <div class="form-box bg-white mt-3">
+      <h1>Create a new Cocktail</h1>
+      <%= simple_form_for(@cocktail) do |f| %>
+        <%= f.input :name %>
+        <%= f.input :time, label: "Prep time" %>
+        <%= f.input :photo, as: :file %>
+        <%= f.button :submit, "Add Cocktail", class: "btn-black" %>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div>
