--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,19 @@
   </head>
 
   <body>
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-    <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://i.pinimg.com/originals/3a/e8/55/3ae8553569847261a36345b003dae98f.jpg" %>
-  <% end %>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <%= link_to 'Cocktails', cocktails_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Create a Cocktail', new_cocktail_path, class: 'btn btn-primary' %>
-      </li>
-    </ul>
-  </div>
-</div>
-    <%= yield %>
+    <!-- nev bar -->
+    <div class="bg-white border-bottom">
+      <div class="container d-flex justify-content-between align-items-center p-3">
+        <%= link_to "/cocktails", class: "navbar-brand" do %>
+          <%= image_tag "https://i.pinimg.com/originals/3a/e8/55/3ae8553569847261a36345b003dae98f.jpg", height: '32', width: '32' %>
+        <% end %>
+        <%= link_to 'Create a Cocktail', new_cocktail_path, class: 'button' %>
+      </div>
+    </div>
+      <%= yield %>
+    </br>
+    </br>
+    </br>
+    </br>
   </body>
 </html>
